# qwen3-tts.cpp

./: .gitignore  CMakeLists.txt  SETUP-STRIXHALO.md  STREAMING_SPEC.md
docs/runtime/: 2026-05-22-local-batch-first-runtime-hotfix.md  2026-05-22-tts-say-batch-first.patch
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  crossfade.h  main.cpp  qwen3_tts.cpp  qwen3_tts.h  server.cpp  tts_transformer.cpp  tts_transformer.h
tests/: test_live_abort_recovery.sh  test_live_chunk_cadence.sh  test_live_duration_matches_stream.sh  test_post_incomplete_body.sh  test_post_split_body.sh  test_streaming_pipeline.cpp
